--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "foundry-pc-types",
+	"name": "foundryvtt-typescript-types",
 	"version": "0.1.0",
 	"description": "TypeScript type definitions for Foundry VTT",
 	"scripts": {
